<resources>
    <string name="app_name">来记账</string>
    <string name="action_settings">Settings</string>
    <string name="about_me">关于我</string>
    <string name="statistics">统计</string>
    <string name="balance">余额：\n</string>
    <string name="yuan">元</string>
    <string name="meals">早午晚餐</string>
    <string name="shopping">购物</string>
    <string name="phone_charge">话费</string>
    <string name="oil_charge">油费</string>
    <string name="other">其他</string>
    <string name="salary">工资</string>
    <string name="part_time_job">兼职</string>
    <string name="bonus">奖金</string>
    <string name="interest">利息</string>
    <string name="expend">支出</string>
    <string name="income">收入</string>
    <string name="hint">提示</string>
    <string name="delete_message">您确定要删除该条账单吗？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="exit_message">再按一次退出程序</string>
    <string name="setting">设置</string>
    <string name="choose_result">选取的结果</string>
    <string name="total">"总计 = "</string>
    <string name="choose_item">选择项目</string>
    <string name="version_value">1.0.3版本</string>
    <string name="contact">联系我</string>
    <string name="qq">QQ:852333743</string>
    <string name="income_statistics">收入统计</string>
    <string name="expend_statistics">支出统计</string>
    <string name="details">详情</string>
    <string name="money">金额</string>
    <string name="money_colon">金额：</string>
    <string name="date_colon">日期：</string>
    <string name="category_colon">类别：</string>
    <string name="remark">备注</string>
    <string name="click_enter">点击进入</string>
    <string name="all_income">所有收入：</string>
    <string name="all_expend">所有支出：</string>
    <string name="input_account_title">请输入账本标题</string>
    <string name="input_money">请输入金额</string>
    <string name="date">日期</string>
    <string name="set_lock">设置图案密码</string>
    <string name="new_add_expend">新增支出</string>
    <string name="reset">重置</string>
    <string name="add_to_success">添加成功！</string>
    <string name="input_money_symbol">请输入金额！</string>
    <string name="new_add_income">新增收入</string>
    <string name="new_add_memo">新增便签</string>
    <string name="clear">清除</string>
    <string name="new_add_memo_success">新增便签成功！</string>
    <string name="input_memo_content">请输入便签内容...</string>
    <string name="use_help">使用帮助</string>
    <string name="delete">删除</string>
    <string name="modify_success">修改成功！</string>
    <string name="delete_success">删除成功！</string>
    <string name="memo">便签</string>
    <string name="memo_details">便签详情</string>


</resources>
