<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:elevation="@dimen/distance_main"
            android:src="@mipmap/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/word_big"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_value"
            android:textColor="@color/red"
            android:textSize="@dimen/word_small" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_contact_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_main"
        android:paddingLeft="@dimen/distance_main"
        android:paddingRight="@dimen/distance_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textSize="@dimen/word_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/qq"
            android:textSize="@dimen/word_main" />
    </RelativeLayout>

    <include layout="@layout/line_view" />


</LinearLayout>